# typeweaver

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LLM.txt  README.md
.beads/: metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.codex/: config.toml
.github/workflows/: deploy.yml
crates/typeweaver-api/: Cargo.toml
crates/typeweaver-api/src/: lib.rs  metrics.rs  public_fonts.rs  telemetry.rs
crates/typeweaver-api/static/: home.css  index.html  tool.css  tool.html  tool.js
crates/typeweaver-api/static/tool/: index.html
crates/typeweaver-bench/: Cargo.toml
crates/typeweaver-bench/src/: lib.rs
crates/typeweaver-cli/: Cargo.toml
crates/typeweaver-cli/src/: main.rs
crates/typeweaver-cli/tests/: cli_end_to_end.rs  cli_help.rs
crates/typeweaver-core/: Cargo.toml
crates/typeweaver-core/src/: lib.rs
crates/typeweaver-ocr/: Cargo.toml
crates/typeweaver-ocr/src/: lib.rs
crates/typeweaver-registry/: Cargo.toml
crates/typeweaver-registry/src/: lib.rs
crates/typeweaver-render/: Cargo.toml
crates/typeweaver-render/src/: lib.rs
deploy/: caddy-typeweaver.caddy  deploy.sh  typeweaver.service
docs/: canonical-plan.md  codex-task-phase1.md  openspec-attack-matrix.md  openspec-demo-flow.md  openspec-implementation-roadmap.md  openspec-product.md  openspec-scoring-model.md  product-ux-spec.md
fixtures/fonts/: DualPack.license
fixtures/sample-output/: registry.json
fixtures/sample-output/reports/: font-67980c9dfd1ca757-web_light_default.json  font-de79ad5b74ad40f2-web_light_default.json
fixtures/sample-output/reports/font-de79ad5b74ad40f2/web_light_default/: preview.txt  report.json
frontend/: examples.html  home.css  index.html  scenarios.html  tool.css  tool.html
